--- a/components/main-header.module.css
+++ b/components/main-header.module.css
@@ -12,7 +12,7 @@
   filter: drop-shadow(0 0 2px #f4c33d);
 }
 
-nav ul {
+.header nav ul {
   display: flex;
   list-style: none;
   margin: 0;
@@ -20,12 +20,12 @@ nav ul {
   gap: 1rem;
 }
 
-nav a {
+.header nav a {
   color: #f4c33d;
   text-decoration: none;
 }
 
-nav a:hover,
-nav a:active {
+.header nav a:hover,
+.header nav a:active {
   color: #bd3df4;
 }
