Change the background color

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@ html {
 body {
   height: 100%;
   margin: 0;
-  background: linear-gradient(180deg, #232029, #231e2d);
+  background: linear-gradient(180deg, #232029, white);
   color: #ddd8e4;
 }
 
